# learn-bazel-example

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  WORKSPACE.bazel  learning.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  requirements.in  scratch.md  tsconfig-base.json  user.bazelrc
notes/: scratch.md
projects/calculator/: BUILD.bazel  index.ts  package.json  tsconfig.json
projects/cat/: BUILD.bazel  generate_hello_go.bazel  readme.md
projects/file-server/: BUILD.bazel  client.ts  gen_rule_foo.sh  idk.ts  index.ts  nice_grpc_proto.bzl  package.json
projects/file-server-protos/: BUILD.bazel  file.proto  file.ts  package.json
projects/file-server/proto/: BUILD.bazel
projects/go-project/: BUILD.bazel  calculator.go  main.go
projects/go-static-server/: BUILD.bazel  go_static_server_binary.bzl  go_static_server_tarball.bzl  main.go
projects/my-ts-project/: BUILD.bazel  index.ts  package.json  tsconfig.json
projects/my-vite-app/: BUILD.bazel
projects/my-vite-app/src/: BUILD.bazel
projects/my_python_app/: BUILD.bazel  main.py
projects/node-js-project/: BUILD.bazel  index.js  package.json
projects/py-calculator/: BUILD.bazel
projects/py_calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/react-project/: BUILD.bazel  package.json
projects/react-project/src/: BUILD.bazel  index.tsx
projects/ts-calculator-lib/: BUILD.bazel
rules/: copy_to_workspace.bzl
rules/z/: nice_grpc_proto.bzl
