# load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

# package(default_visibility = ["//examples/project_references:__subpackages__"])

# Demonstrate that transitive tsconfig extends clauses work
ts_config(
    name = "config",
    src = "tsconfig.json",
    deps = [
        #    "tsconfig-extended.json",
        "//:tsconfig",
    ],
)

npm_link_all_packages()

ts_project(
    name = "calculator_ts",
    srcs = [
        "index.ts",
    ],
    declaration = True,
    source_map = True,
    tsconfig = ":config",
    # transpiler = swc,
    deps = [],
)

npm_package(
    name = "calculator",
    srcs = [
        "package.json",
        ":calculator_ts",
    ],
    visibility = ["//visibility:public"],
)
