load("@npm//:grpc-tools/package_json.bzl", grpc_tools_bin = "bin")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@npm//:defs.bzl", "npm_link_all_packages")

# load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")

# TODO ETHAN STOPPED HERE!
# fix fix ifx import incorrec
load("//rules:copy_to_workspace.bzl", "copy_to_workspace")

npm_link_all_packages()

file_name = "file.proto"

base_name = file_name.replace(".proto", "")

SRCS = [file_name]

BUILD_DEPS = ["//:node_modules/" + d for d in [
    "long",
    "nice-grpc",
    "nice-grpc-common",
    "protobufjs",
    "ts-proto",
    "grpc-tools",
]]

gen_target = base_name + "_generated"

grpc_tools_bin.grpc_tools_node_protoc(
    name = gen_target,
    srcs = SRCS + BUILD_DEPS,
    # out_dirs = ["ts_protos_foo"],
    outs = [base_name + ".ts"],
    args = [
        "--plugin=protoc-gen-ts_proto=../../node_modules/.bin/protoc-gen-ts_proto",  # todo, can there be a better way to specify the root node_modules/.bin?
        "--ts_proto_out=./",
        "--ts_proto_opt=outputServices=nice-grpc,outputServices=generic-definitions,useExactTypes=true,outputPartialMethods=false,oneof=unions",
        "--proto_path=./",
        "./" + file_name,
    ],
    chdir = package_name(),
    visibility = ["//visibility:public"],
)

write_index_target = base_name + "_index"

write_file(
    name = write_index_target,
    out = "index.ts",
    content = ["export * from \"./{}\";".format(base_name)],
)

# Map from some source file to a target that produces it.
# This recipe assumes you already have some such targets.
_GENERATED = {
    "//projects/file-server-protos:" + base_name + ".ts": "projects/file-server-protos",
    "//projects/file-server-protos:" + "index.ts": "projects/file-server-protos",
    # ...
}

copy_to_workspace(
    name = "generate",
    map = _GENERATED,
)

# compiling and npm package

ts_proj_name = base_name + "_server_protos_proj"

ts_project(
    name = ts_proj_name,
    srcs = [
        base_name + ".ts",
        "index.ts",
    ],
    declaration = True,
    tsconfig = "//:tsconfig",
    # transpiler = swc,
    deps = BUILD_DEPS,  #TODO prune to only necessary runtime deps
)

npm_package_name = base_name + "-server-protos"

npm_package(
    name = npm_package_name,
    srcs = [
        "package.json",
        ":" + ts_proj_name,
    ],
    visibility = ["//visibility:public"],
)
