load("@aspect_rules_js//js:defs.bzl", "js_binary")

# load("@npm//projects/my-vite-app:vite/package_json.bzl", vite_bin = "bin")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

# package(default_visibility = ["//examples/project_references:__subpackages__"])

# Demonstrate that transitive tsconfig extends clauses work
ts_config(
    name = "config",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig",
    ],
)

npm_link_all_packages()

NODE_MODULES = ["//:node_modules/" + d for d in [
    "@esherr/file-server-protos",
    "nice-grpc",
]]

ts_project(
    name = "app-project",
    srcs = [
        "index.ts",
    ],
    declaration = True,
    source_map = True,
    tsconfig = ":config",
    # transpiler = swc,
    deps = NODE_MODULES,
)

js_binary(
    name = "app",
    data = [":app-project", "server-files/sample.mp4"],
    entry_point = "index.js",
)

# grpc client example
ts_project(
    name = "client-project",
    srcs = [
        "client.ts",
    ],
    declaration = True,
    source_map = True,
    tsconfig = ":config",
    # transpiler = swc,
    deps = NODE_MODULES + ["//:node_modules/cli-progress"],
)

js_binary(
    name = "client",
    # Reference the location where the acorn npm module was linked in the root Bazel package
    data = [":client-project"],
    entry_point = "client.js",
)
