load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")


go_library(
    name = "calculator",
    srcs = [
        "calculator.go"
    ],
    importpath = "calculator",
    deps = [],
    visibility = ["//visibility:public"]
)

go_binary(
    name = "main",
    srcs = ["main.go"],
    deps = [":calculator"]
)
