load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")

filegroup(
    name = "static_files",
    srcs = glob(["static/**"]),
)

# needed for visibility from go_static_server_binary
filegroup(
    name = "srcs",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "static-server-library",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "static-server",
    srcs = ["//projects/go-static-server:main.go"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "static-server-amd64",
    platform = "@io_bazel_rules_go//go/toolchain:linux_amd64",
    target = ":static-server",
    visibility = ["//visibility:public"],
)
