# load("@aspect_rules_js//js:defs.bzl", "js_binary")
# load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
# # load("@npm//:defs.bzl", "npm_link_all_packages")

# # npm_link_all_packages()

# ts_project(
#     name = "something_something",
#     srcs = [
#         "index.ts"
#     ],
#     deps = [
        
#     ]
# )