load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

# package(default_visibility = ["//examples/project_references:__subpackages__"])

# Demonstrate that transitive tsconfig extends clauses work
ts_config(
    name = "config",
    src = "tsconfig.json",
    deps = [
        #    "tsconfig-extended.json",
        "//:tsconfig",
    ],
)

npm_link_all_packages()

ts_project(
    name = "app-project",
    srcs = [
        "index.ts",
    ],
    declaration = True,
    source_map = True,
    tsconfig = ":config",
    # transpiler = swc,
    deps = ["//:node_modules/@esherr/calculator"],
)

js_binary(
    name = "app",
    # Reference the location where the acorn npm module was linked in the root Bazel package
    data = [":app-project"],
    entry_point = "index.js",
)
