load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//projects/my-vite-app:vite/package_json.bzl", vite_bin = "bin")

# This macro expands to a link_npm_package for each third-party package in package.json
npm_link_all_packages(name = "node_modules")

filegroup(
    name = "public",
    srcs = glob(["public/**"]),
)

SRCS = [
    # "env.d.ts",
    "index.html",
    "package.json",
    "vite.config.ts",
    "tsconfig.json",
    "tsconfig.node.json",
    "//projects/my-vite-app/src",
    ":public",
]

BUILD_DEPS = [":node_modules/" + d for d in [
    "@vitejs/plugin-react",
    "vite",
    "react",
    "react-dom",
]]

vite_bin.vite(
    name = "build",
    srcs = SRCS + BUILD_DEPS,
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["dist"],
)

# vue_tsc_bin.vue_tsc_test(
#     name = "type-check",
#     args = ["--noEmit"],
#     chdir = package_name(),
#     data = SRCS + BUILD_DEPS,
#     include_declarations = True,
# )

vite_bin.vite_binary(
    name = "vite",
    chdir = package_name(),
    data = SRCS + BUILD_DEPS,
)

# build_test(
#     name = "build_test",
#     targets = [
#         ":build",
#         ":type-check",
#     ],
# )
