load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//projects/my-vite-app:vite/package_json.bzl", vite_bin = "bin")
load("//projects/go-static-server:go_static_server_binary.bzl", "go_static_server_binary")
load("//projects/go-static-server:go_static_server_tarball.bzl", "go_static_server_tarball")

# This macro expands to a link_npm_package for each third-party package in package.json
npm_link_all_packages(name = "node_modules")

filegroup(
    name = "public",
    srcs = glob(["public/**"]),
)

SRCS = [
    # "env.d.ts",
    "index.html",
    "package.json",
    "vite.config.ts",
    "tsconfig.json",
    "tsconfig.node.json",
    "//projects/my-vite-app/src",
    ":public",
]

BUILD_DEPS = [":node_modules/" + d for d in [
    "@vitejs/plugin-react",
    "vite",
    "react",
    "react-dom",
]]

vite_bin.vite(
    name = "build",
    srcs = SRCS + BUILD_DEPS,
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["dist"],
    visibility = ["//visibility:public"],
)

go_static_server_binary(
    name = "app",
    data = [":build"],
    env = {"STATIC_DIR": "./projects/my-vite-app/dist"},
)

vite_bin.vite_binary(
    name = "vite",
    chdir = package_name(),
    data = SRCS + BUILD_DEPS,
)

# build_test(
#     name = "build_test",
#     targets = [
#         ":build",
#         ":type-check",
#     ],
# )

# custom static server
go_static_server_tarball(
    name = "tarball",
    repo_tags = ["my-vite-app:latest"],
    vite_tar_srcs = [":build"],
)
