# load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

# package(default_visibility = ["//examples/project_references:__subpackages__"])

# # Demonstrate that transitive tsconfig extends clauses work
# ts_config(
#     name = "config",
#     src = "tsconfig.json",
#     deps = [
# #        "tsconfig-extended.json",
#         "//:tsconfig",
#     ],
# )

# ts_project(
#     name = "ts-calculator-li",
#     composite = True,
#     tsconfig = ":config",
#     # Intentionally not syncing this option from tsconfig, to test validator suppression
#     # source_map = True,
#     validate = False,
#     # Use @babel/parser since the package.json is required to resolve "typings" field
#     # Repro of rules_nodejs#2044
#     deps = [
# #        "//examples:node_modules/@babel/parser",
# #        "//examples:node_modules/@babel/types",
#     ],
# )

load("@aspect_rules_swc//swc:defs.bzl", "swc")
