"""Export all files for vite.

Since React doesn't natively support Bazel, we just wrap the build system they do support.
This does not provide Bazel's incrementality benefits.
"""

load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

copy_to_bin(
    name = "src",
    srcs = glob([
        "**/*.css",
        "**/*.svg",
        "**/*.ts",
        "**/*.tsx",
    ]),
    visibility = ["//visibility:public"],
)
